phase fainal (readme)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<script src="index.js" type="module"></script>
 </head>
 <body>
-	<h3>COMP281 Assignment 1 : Canvas</h3>
+	<h3>COMP281 Assignment 1  Canvas : 6712231098 ฐากูร อารูงะ วิทคอมกลุ่ม 3</h3>
 	<canvas id="myCanvas"></canvas>
 </body>
 </html>
